--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -30,10 +30,9 @@ jobs:
           echo 'rustdoc.swc.rs' > target/doc/CNAME
 
       - name: Deploy
-        if: github.ref == 'refs/heads/main'
         uses: JamesIves/github-pages-deploy-action@4.1.8
         with:
-          token: ${{ secrets.GH_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
           branch: gh-pages
           folder: target/doc
           clean: true
