--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -23,7 +23,7 @@ jobs:
           profile: minimal
 
       - name: Create rustdoc
-        run: cargo doc --all --features plugin_transform --features ecma_loader --features ecma_utils --features ecma_quote --features ecma_visit --features ecma_transforms --features __testing_transform --features css_compat --features css_codegen --features css_minifier --features css_prefixer --features css_parser --features common_tty
+        run: cargo doc --all --features ecma_plugin_transform --features ecma_loader --features ecma_utils --features ecma_quote --features ecma_visit --features ecma_transforms --features __testing_transform --features css_compat --features css_codegen --features css_minifier --features css_prefixer --features css_parser --features common_tty
 
       - name: Create CNAME
         run: |
